# Taming_the_Ito-Lyon

./: .gitignore  OU_dw.py  obtuna.db  pyproject.toml  sdeonet.py
configs/: log_ncde.toml  m_nrde.toml  ncde.toml  nrde.toml  sdeonet.toml
configs/oxford_mm/: m_nrde_mlp.toml
configs/rough_volatility/: gru.toml  log_ncde.toml  log_ncde_reimpl.toml  m_nrde.toml  m_nrde_gl.toml  m_nrde_mkw.toml  m_nrde_multiwindow.toml  ncde.toml  nrde.toml  ~m_nrde.toml  ~ncde++.toml  ~ncde.toml  ~nrde.toml
configs/rough_volatility_simple/: gru.toml  log_ncde.toml  log_ncde_reimpl.toml  ~m_nrde.toml  ~m_nrde_sigker_branched.toml  ~ncde++.toml  ~ncde.toml  ~nrde.toml
configs/sg_so3_sim/: gru.toml  gru_hermite.toml  gru_sg_so3.toml  m_nrde.toml  m_nrde_hermite.toml  m_nrde_mlp.toml  m_nrde_mlp_sigker.toml  m_nrde_sg_so3.toml  ncde.toml  ncde_sg_so3.toml  ncde_so3.toml  nrde.toml  sg_ncde.toml  sg_so3_ncde.toml  so3_ncde.toml
configs/spd_covariance/: logncde_reimpl_wishart.toml  ncde_sigker.toml  nrde_wishart.toml  ~m_nrde.toml  ~m_nrde_wishart.toml
taming_the_ito_lyon/config/: __init__.py  config.py  config_options.py
taming_the_ito_lyon/data/: __init__.py  datasets.py  integrity_checks.py  other_bergomi.py  oxford_multimotion.py  rough_volatility.py  shapes_cli.py  simple_rough_volatility.py  so3_dynamics_sim.py  spd_covariance.py  spd_wishart_diffusion.py
taming_the_ito_lyon/models/: __init__.py  extrapolation.py  gru.py  log_ncde.py  logsig_cde_solve.py  logsignatures.py  m_nrde.py  ncde.py  nrde.py  sdeonet.py
taming_the_ito_lyon/paper/: tables_cli.py  tables_rough_vol.py  tables_so3.py
taming_the_ito_lyon/training/: experiment.py  factories.py  grad_functions.py  io.py  loops.py  losses.py  optimize_cli.py  results_gathering_fns.py  results_plotting.py  runtime.py  test_cli.py  train.py  train_cli.py
taming_the_ito_lyon/utils/: __init__.py  mpl_style.py  savitzky_golay_so3.py  so3.py
tests/: test_training_dry_run.py
