[project]
name = "taming-the-ito-lyon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jax[cuda]>=0.8.1",
    "diffrax>=0.7.0",
    "equinox>=0.13.2",
    "optax>=0.2.6",
    "stochastax",
    "cyreal",
    "numpy>=2.0.0",
    "scipy>=1.16.0",
    "pydantic>=2.12.3",
    "tqdm>=4.67.1",
    "mypy>=1.18.2",
    "filelock>=3.20.2",
    "matplotlib>=3.10.8",
    "optuna>=4.6.0",
    "lovely-jax>=0.1.4",
]

[tool.uv.sources]
stochastax = { git = "https://github.com/luke-a-thompson/Stochastax.git", branch = "ArbitraryDepthBranchedRP" }
cyreal = { git = "https://github.com/luke-a-thompson/cyreal_dynamics.git", branch = "master" }

[project.scripts]
train = "taming_the_ito_lyon.training.train_cli:main"
test = "taming_the_ito_lyon.training.test_cli:main"
optimize = "taming_the_ito_lyon.training.optimize_cli:main"
tables = "taming_the_ito_lyon.paper.tables_cli:main"
shapes = "taming_the_ito_lyon.data.shapes_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=9.0.2"]

[tool.hatch.build.targets.wheel]
packages = ["taming_the_ito_lyon"]

[tool.hatch.metadata]
allow-direct-references = true
